# template-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml  merge.yaml  python-package-conda.yaml
